<resources>
    <string name="app_name">Blood Alliance</string>
    <string name="blood_drops_image">Blood Drops Image</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_here">Register Here</string>
    <string name="Heading">Blood Bank Management</string>
    <string name="enter_name">Name</string>
    <string name="enter_mobile_number">Mobile Number</string>
    <string name="already">Already have an account, click here.</string>
    <string name="enter_username">Username</string>
    <string name="register_me">Register me</string>
    <string name="enter_blood_group">Your Blood Group</string>
    <string name="enter_your_city">Your City</string>
    <string name="enter_your_state">Your State</string>
    <string name="registration">Registration</string>
    <string name="check_if_manager_role">Check If Manager Role</string>
    <string name="click_here_for_manager_login">Click Here for Manager Login</string>
    <string name="welcome_managers">Welcome Managers</string>
    <string name="number_of_previous_donations">Number of Previous Donations</string>
    <string name="last_donation_date_yyyy_mm_dd">Last Donation Date (YYYY-MM-DD)</string>
    <string name="welcome">Welcome</string>
    <string name="show_active_users">Show Active Users</string>
    <string name="show_profile">Show Profile</string>
    <string name="show_blood_packet_stock">Show Blood Packet Stock</string>
    <string name="put_donation_requests">Put Donation Requests</string>
    <string name="put_blood_requests">Put Blood Requests</string>
    <string name="show_blood_requests">Show Blood Requests</string>
    <string name="create_new_manager_id">Create New Manager Id</string>
    <string name="show_donation_requests">Show Donation Requests</string>
    <string name="request_for">Request for:</string>
    <string name="state">State:</string>
    <string name="city">City:</string>
    <string name="donations">Donations:</string>
    <string name="next_donation">Next Donation:</string>
    <string name="last_donation">Last Donation:</string>
    <string name="blood_group">Blood Group:</string>
    <string name="name">Name:</string>
    <string name="user_details">User Details</string>
    <string name="update_info">Update Info</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="packet_id">Packet ID</string>
    <string name="blood_stock">Blood Stock</string>
    <string name="app_users">App Users</string>
    <string name="donations1">Donations</string>
    <string name="user_id">User Id</string>
    <string name="name1">Name</string>
    <string name="blood_packet_requests">Blood Packet Requests</string>
    <string name="donation_requests">Donation Requests</string>
    <string name="request_id">Request ID</string>
    <string name="blood_group1">Blood Group</string>
    <string name="city1">City</string>
    <string name="state1">State</string>
    <string name="blood_requests">BLOOD REQUESTS</string>
</resources>