<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtReq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/request_id"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtUserID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/user_id"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtUserBG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/blood_group1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtUserCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/city1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtUserState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/state1"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>